--- a/SmartShop/SmartShop-UI/src/App.css
+++ b/SmartShop/SmartShop-UI/src/App.css
@@ -51,6 +51,42 @@ input[type="text"] {
 	box-sizing: border-box;
 }
 
+.clear-search {
+	font-size: large;
+	border: medium double black;
+	padding: 5px;
+	background: none;
+	color: black;
+	cursor: pointer;
+	outline: none;
+}
+
+.clear-search:hover {
+	color: red;
+}
+
+.clear-search:focus {
+	outline: none;
+}
+
+.loading-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.5);
+	z-index: 9999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.loading-spinner {
+	width: 100px;
+	height: 100px;
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
