--- a/SmartShop/SmartShop-UI/src/App.css
+++ b/SmartShop/SmartShop-UI/src/App.css
@@ -30,14 +30,14 @@
 
 table {
 	border-collapse: collapse;
-	margin: 15px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 15px auto 50px auto;
+	width: 95%;
 }
 
 td,
 th {
 	border: 1px solid black;
+	min-width: 40px;
 	padding: 8px;
 }
 
@@ -85,6 +85,62 @@ input[type="text"] {
 .loading-spinner {
 	width: 100px;
 	height: 100px;
+}
+
+.pagination {
+	display: flex;
+	list-style: none;
+	justify-content: center;
+}
+
+.pagination__link {
+	background-color: #f2f2f2;
+	border: 1px solid #ddd;
+	color: #888;
+	padding: 8px 16px;
+	user-select: none;
+	border-radius: 4px;
+	margin: 0px 10px;
+	cursor: pointer;
+}
+
+.pagination__link--active {
+	font-weight: bold;
+	color: white;
+	background-color: darkslategray;
+	border-color: black;
+}
+
+.pagination__link:hover {
+	background-color: lightgray;
+}
+
+.pagination__next a {
+	background-color: #f2f2f2;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	user-select: none;
+	color: #888;
+	padding: 8px 16px;
+	cursor: pointer;
+	margin-left: 15px;
+}
+
+.pagination__prev a {
+	background-color: #f2f2f2;
+	border: 1px solid #ddd;
+	user-select: none;
+	border-radius: 4px;
+	color: #888;
+	padding: 8px 16px;
+	cursor: pointer;
+	margin-right: 15px;
+}
+
+.pagination__page-desc {
+	margin-left: 20px;
+	font-size: 14px;
+	color: #777;
 }
 
 @keyframes App-logo-spin {
